@@ -2,6 +2,7 @@ dpkg (1.14.3) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Fix perl warnings in dpkg-genchanges when called with -S. Closes: #423193
+  * Refactor update-alternatives.
 
  -- Guillem Jover <guillem@debian.org>  Wed, 09 May 2007 22:40:16 +0300
 
