@@ -1,3 +1,11 @@
+2007-05-11  Guillem Jover  <guillem@debian.org>
+
+	* scripts/update-alternatives.pl ($mode): Rename to ...
+	($action): ... this. Fix all users.
+	(checkmanymodes): Rename to ...
+	(check_many_actions): ... this. Fix all callers. Add prototype.
+	Change the error message to say 'commands' instead of 'modes'.
+
 2007-05-10  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-genchanges.pl: Only use the %p2f values if defined.
